--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
 .Typewriter {
   display: inline;
 }
+
+.at-top {
+  box-shadow: none !important;
+  background-image: none !important;
+  background-color: rgba(0, 0, 0, 0) !important;
+}
+
+.not-at-top {
+  backdrop-filter: blur(5px) !important;
+  background-color: rgba(0, 0, 0, .25) !important;
+}
