--- a/src/style.css
+++ b/src/style.css
@@ -29,3 +29,21 @@ body,
 .mb1 {
   margin-bottom: 10px;
 }
+
+@keyframes blur-in {
+  from {
+    backdrop-filter: blur(0px);
+  }
+  to {
+    backdrop-filter: blur(5px);
+  }
+}
+
+@keyframes blur-out {
+  from {
+    backdrop-filter: blur(5px);
+  }
+  to {
+    backdrop-filter: blur(0px);
+  }
+}
