--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ body,
   from {
     backdrop-filter: blur(0px);
   }
+
   to {
     backdrop-filter: blur(5px);
   }
@@ -43,7 +44,36 @@ body,
   from {
     backdrop-filter: blur(5px);
   }
+
   to {
     backdrop-filter: blur(0px);
+  }
+}
+
+@keyframes left-side {
+  0% {
+    transform: translate(0%) scale(1,1);
+  }
+
+  30% {
+    transform: translate(0%) scale(1,3);
+  }
+
+  100% {
+    transform: translateX(-300%);
+  }
+}
+
+@keyframes right-side {
+  0% {
+    transform: translate(0%) scale(1,1);
+  }
+
+  30% {
+    transform: translate(0) scale(1,3);
+  }
+
+  100% {
+    transform: translateX(300%);
   }
 }
